<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DefaultIntent</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="call">Call</string>
    <string name="sms">Sms</string>
    <string name="email">Email</string> 
     <string name="head">DefaultIntents</string> 
     <string name="num">Enter Number</string>
     <string name="show">Show</string>  
     <string name="to">To</string>  
     <string name="sub">Subject</string>  
     <string name="mes">Message</string>  
     <string name="cal">Enter Number</string>  
</resources>
