<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/d1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="70sp"
        android:text="@string/head"
        android:textColor="#FFFF00"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:layout_gravity="center"
            android:text="@string/call"
            android:textColor="#FFFF00"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="20sp"
            android:text="@string/sms"
            android:textColor="#FFFF00"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="20sp"
            android:text="@string/email"
            android:textColor="#FFFF00"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>